text align issue

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -96,6 +96,10 @@ nav a {
     background-image: url(../img/phish.png);
 }
 
+.one p{
+    margin-left: 25px;
+}
+
 .two {
     background-image: url(../img/earth.png);
 }
